# owp-open-source-project-template

./: LICENSE  README.md
python/miniconda/: .gitignore  EXCLUDE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
python/miniconda/src/hello/: hello.py
python/miniconda/tests/: test_hello.py
