[metadata]
name = hello
version = 0.1.0
author = Your Name
author_email = your.name@noaa.gov
description = Generic template for data-driven projects using Python.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = USDOC
license_files =
    LICENSE
url = https://github.com/NOAA-OWP/
project_urls =
    Documentation = https://github.com/NOAA-OWP/
    Source = https://github.com/NOAA-OWP/
    Tracker = https://github.com/NOAA-OWP/
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Free To Use But Restricted
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Hydrology
    Operating System :: OS Independent
    Private :: Do not Upload

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src
